ports: updated irradium linux port names

--- a/prt-get/prt-get.conf
+++ b/prt-get/prt-get.conf
@@ -4,9 +4,10 @@
 
 ## configure directories prt-get will source ports from
 ## note: the order matters: the package found first is used
-prtdir /usr/ports/core-calm
-prtdir /usr/ports/opt-calm
-prtdir /usr/ports/xorg-calm
+prtdir /usr/ports/irradium-core
+prtdir /usr/ports/irradium-opt
+prtdir /usr/ports/irradium-xorg
+prtdir /usr/ports/irradium-xfce
 prtdir /usr/ports/core
 prtdir /usr/ports/opt
 prtdir /usr/ports/xorg
