prt-get: default inactive port xfce

--- a/prt-get/prt-get.conf
+++ b/prt-get/prt-get.conf
@@ -7,7 +7,7 @@
 prtdir /usr/ports/irradium-core
 prtdir /usr/ports/irradium-opt
 prtdir /usr/ports/irradium-xorg
-prtdir /usr/ports/irradium-xfce
+#prtdir /usr/ports/irradium-xfce
 prtdir /usr/ports/core
 prtdir /usr/ports/opt
 prtdir /usr/ports/xorg
