--- a/pkgutils/pkgmk.conf
+++ b/pkgutils/pkgmk.conf
@@ -2,11 +2,14 @@
 # /etc/pkgmk.conf: pkgmk(8) configuration
 #
 
-export CFLAGS="-O2 -pipe"
-export CXXFLAGS="${CFLAGS}"
+export CFLAGS="-O2 -pipe -fstack-protector-strong -fno-plt -fexceptions \
+               -Wp,-D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security \
+               -fstack-clash-protection -fcf-protection"
+export CXXFLAGS="$CFLAGS -Wp,-D_GLIBCXX_ASSERTIONS"
+export LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 
-# export JOBS=$(nproc)
-# export MAKEFLAGS="-j $JOBS"
+export JOBS=$(($(nproc)+1))
+export MAKEFLAGS="-j $JOBS"
 
 # PKGMK_SOURCE_MIRRORS=()
 # PKGMK_SOURCE_DIR="$PWD"
