--- a/pkgutils/pkgmk.conf
+++ b/pkgutils/pkgmk.conf
@@ -4,7 +4,7 @@
 
 export CFLAGS="-O2 -pipe -fstack-protector-strong -fno-plt -fexceptions \
                -Wp,-D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security \
-               -fstack-clash-protection -fcf-protection"
+               -fstack-clash-protection"
 export CXXFLAGS="$CFLAGS -Wp,-D_GLIBCXX_ASSERTIONS"
 export LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 
