--- a/lightdm/50-irradium-defaults.conf
+++ b/lightdm/50-irradium-defaults.conf
@@ -3,9 +3,9 @@ pam-service = lightdm
 pam-autologin-service = lightdm-autologin
 pam-greeter-service = lightdm-greeter
 xserver-command=/usr/bin/X
-session-wrapper=/etc/X11/xdm/Xsession
+session-wrapper=/etc/lightdm/Xsession
 #greeter-setup-script=/etc/X11/xdm/Xsetup
 #session-setup-script=/etc/X11/xdm/Xstartup
-session-cleanup-script=/etc/X11/xdm/Xreset
+#session-cleanup-script=/etc/X11/xdm/Xreset
 greeter-session=lightdm-gtk-greeter
-session-wrapper=lightdm-session
+#session-wrapper=lightdm-session
